@@ -1,4 +1,14 @@
+104
+- tvh bump to c66e3bc (master 2020.10.22)
+
+103
+- tvh bump to 0f13f59 (master 2020.07.07)
+
+102
+- tvh bump to 51a4c5b (master 2020.06.10)
+
 101
+- python3, tvh bump to 2af3b9e (master 2020.05.22)
 - update gnutls to 3.6.14
 
 100
